--- a/static/style.css
+++ b/static/style.css
@@ -67,7 +67,8 @@ body {
     font-weight: 600;
     margin-right: 1em;
     font-size: 1.1em;
-    flex-shrink: 0;
+    object-fit: cover;
+    vertical-align: middle;
 }
 
 .event-text {
